# TMDB-Trakt-Syncer

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/: feature_request.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
TMDBTraktSyncer/: TMDBTraktSyncer.py  arguments.py  authTrakt.py  checkVersion.py  errorHandling.py  errorLogger.py  tmdbData.py  tmdbRatings.py  traktData.py  traktRatings.py  verifyCredentials.py
